--- a/test/integration/ci-operator-prowgen/input/jobs/legacy/branches-separate-files/legacy-branches-separate-files-master-presubmits.yaml
+++ b/test/integration/ci-operator-prowgen/input/jobs/legacy/branches-separate-files/legacy-branches-separate-files-master-presubmits.yaml
@@ -3,6 +3,6 @@ presubmits:
   legacy/branches-separate-files:
   - always_run: false
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     name: pull-ci-legacy-branches-separate-files-test
