--- a/test/integration/ci-operator-prowgen/output/jobs/norehearsals/duper/norehearsals-duper-master-presubmits.yaml
+++ b/test/integration/ci-operator-prowgen/output/jobs/norehearsals/duper/norehearsals-duper-master-presubmits.yaml
@@ -3,15 +3,15 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/lint
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci.openshift.io/generator: prowgen
-    name: pull-ci-norehearsals-duper-master-lint
+    name: pull-ci-norehearsals-duper-main-lint
     rerun_command: /test lint
     spec:
       containers:
@@ -56,15 +56,15 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/unit
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci.openshift.io/generator: prowgen
-    name: pull-ci-norehearsals-duper-master-unit
+    name: pull-ci-norehearsals-duper-main-unit
     rerun_command: /test unit
     spec:
       containers:
