--- a/test/integration/template-deprecator/input/config.yaml
+++ b/test/integration/template-deprecator/input/config.yaml
@@ -15,7 +15,7 @@ plank:
 tide:
   queries:
   - includedBranches:
-    - master
+    - main
     - release-4.2
     repos:
     - openshift/installer
