--- a/cmd/prow-job-dispatcher/testdata/TestDispatchJobs/basic_case/wildfly-operator-presubmits.yaml
+++ b/cmd/prow-job-dispatcher/testdata/TestDispatchJobs/basic_case/wildfly-operator-presubmits.yaml
@@ -2,7 +2,7 @@ postsubmits:
   wildfly/wildfly-operator:
   - agent: kubernetes
     branches:
-    - ^master$
+    - ^main$
     cluster: api.ci
     decorate: true
     decoration_config:
@@ -11,7 +11,7 @@ postsubmits:
       ci-operator.openshift.io/is-promotion: "true"
       ci-operator.openshift.io/prowgen-controlled: "true"
     max_concurrency: 1
-    name: branch-ci-wildfly-wildfly-operator-master-images
+    name: branch-ci-wildfly-wildfly-operator-main-images
     spec:
       containers:
       - args:
