--- a/test/integration/ci-operator-prowgen/output/jobs/slack-report/duper/slack-report-duper-master-postsubmits.yaml
+++ b/test/integration/ci-operator-prowgen/output/jobs/slack-report/duper/slack-report-duper-master-postsubmits.yaml
@@ -3,7 +3,7 @@ postsubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
+    - ^main$
     decorate: true
     decoration_config:
       skip_cloning: true
@@ -11,7 +11,7 @@ postsubmits:
       ci-operator.openshift.io/variant: exclude
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-slack-report-duper-master-exclude-upload-results
+    name: branch-ci-slack-report-duper-main-exclude-upload-results
     spec:
       containers:
       - args:
@@ -55,14 +55,14 @@ postsubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
+    - ^main$
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-slack-report-duper-master-upload-results
+    name: branch-ci-slack-report-duper-main-upload-results
     reporter_config:
       slack:
         channel: '#slack-channel'
