--- a/test/integration/ci-operator-prowgen/output/jobs/slack-report/duper/slack-report-duper-master-presubmits.yaml
+++ b/test/integration/ci-operator-prowgen/output/jobs/slack-report/duper/slack-report-duper-master-presubmits.yaml
@@ -3,8 +3,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/e2e
     decorate: true
     decoration_config:
@@ -12,7 +12,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-slack-report-duper-master-e2e
+    name: pull-ci-slack-report-duper-main-e2e
     rerun_command: /test e2e
     spec:
       containers:
@@ -57,8 +57,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/exclude-e2e
     decorate: true
     decoration_config:
@@ -67,7 +67,7 @@ presubmits:
       ci-operator.openshift.io/variant: exclude
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-slack-report-duper-master-exclude-e2e
+    name: pull-ci-slack-report-duper-main-exclude-e2e
     rerun_command: /test exclude-e2e
     spec:
       containers:
@@ -113,8 +113,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/exclude-unit
     decorate: true
     decoration_config:
@@ -123,7 +123,7 @@ presubmits:
       ci-operator.openshift.io/variant: exclude
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-slack-report-duper-master-exclude-unit
+    name: pull-ci-slack-report-duper-main-exclude-unit
     rerun_command: /test exclude-unit
     spec:
       containers:
@@ -169,8 +169,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/unit
     decorate: true
     decoration_config:
@@ -178,7 +178,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-slack-report-duper-master-unit
+    name: pull-ci-slack-report-duper-main-unit
     reporter_config:
       slack:
         channel: '#slack-channel'
