--- a/test/integration/pj-rehearse/candidate/ci-operator/jobs/super/duper/super-duper-master-presubmits.yaml
+++ b/test/integration/pj-rehearse/candidate/ci-operator/jobs/super/duper/super-duper-master-presubmits.yaml
@@ -3,7 +3,7 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     cluster: foo
     context: ci/prow/cmd
     decorate: true
@@ -11,7 +11,7 @@ presubmits:
       skip_cloning: true
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-cmd
+    name: pull-ci-super-duper-main-cmd
     rerun_command: /test cmd
     spec:
       containers:
@@ -33,14 +33,14 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/e2e-aws
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-e2e-aws
+    name: pull-ci-super-duper-main-e2e-aws
     rerun_command: /test e2e-aws
     spec:
       containers:
@@ -78,8 +78,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/images
     decorate: true
     decoration_config:
@@ -87,7 +87,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-images
+    name: pull-ci-super-duper-main-images
     rerun_command: /test images
     spec:
       containers:
@@ -132,14 +132,14 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/integration
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-integration
+    name: pull-ci-super-duper-main-integration
     rerun_command: /test integration
     spec:
       containers:
@@ -161,14 +161,14 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/test-template-e2e-aws
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-test-template-e2e-aws
+    name: pull-ci-super-duper-main-test-template-e2e-aws
     rerun_command: /test test-template-e2e-aws
     spec:
       containers:
@@ -206,14 +206,14 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/test-template-e2e-openstack
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-test-template-e2e-openstack
+    name: pull-ci-super-duper-main-test-template-e2e-openstack
     rerun_command: /test test-template-e2e-openstack
     spec:
       containers:
@@ -251,14 +251,14 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/unit
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-unit
+    name: pull-ci-super-duper-main-unit
     rerun_command: /test unit
     spec:
       containers:
@@ -280,10 +280,10 @@ presubmits:
   - agent: jenkins
     always_run: false
     branches:
-    - master
+    - main
     context: ci/openshift-jenkins/extended_gssapi
     labels:
-      master: changed
+      main: changed
     name: test_pull_request_origin_extended_gssapi
     rerun_command: /test extended_gssapi
     trigger: ((?m)^/test extended_gssapi,?(\s+|$))
