--- a/test/integration/pj-rehearse/master/ci-operator/jobs/super/duper/super-duper-master-presubmits.yaml
+++ b/test/integration/pj-rehearse/master/ci-operator/jobs/super/duper/super-duper-master-presubmits.yaml
@@ -3,12 +3,12 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/cmd
     decorate: true
     decoration_config:
       skip_cloning: true
-    name: pull-ci-super-duper-master-cmd
+    name: pull-ci-super-duper-main-cmd
     rerun_command: /test cmd
     spec:
       containers:
@@ -30,12 +30,12 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/e2e-aws
     decorate: true
     decoration_config:
       skip_cloning: true
-    name: pull-ci-super-duper-master-e2e-aws
+    name: pull-ci-super-duper-main-e2e-aws
     rerun_command: /test e2e-aws
     spec:
       containers:
@@ -73,8 +73,8 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^master$
-    - ^master-
+    - ^main$
+    - ^main-
     context: ci/prow/images
     decorate: true
     decoration_config:
@@ -82,7 +82,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-super-duper-master-images
+    name: pull-ci-super-duper-main-images
     rerun_command: /test images
     spec:
       containers:
@@ -127,12 +127,12 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/integration
     decorate: true
     decoration_config:
       skip_cloning: true
-    name: pull-ci-super-duper-master-integration
+    name: pull-ci-super-duper-main-integration
     rerun_command: /test integration
     spec:
       containers:
@@ -154,12 +154,12 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/test-template-e2e-aws
     decorate: true
     decoration_config:
       skip_cloning: true
-    name: pull-ci-super-duper-master-test-template-e2e-aws
+    name: pull-ci-super-duper-main-test-template-e2e-aws
     rerun_command: /test test-template-e2e-aws
     spec:
       containers:
@@ -197,12 +197,12 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/test-template-e2e-openstack
     decorate: true
     decoration_config:
       skip_cloning: true
-    name: pull-ci-super-duper-master-test-template-e2e-openstack
+    name: pull-ci-super-duper-main-test-template-e2e-openstack
     rerun_command: /test test-template-e2e-openstack
     spec:
       containers:
@@ -240,12 +240,12 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - main
     context: ci/prow/unit
     decorate: true
     decoration_config:
       skip_cloning: true
-    name: pull-ci-super-duper-master-unit
+    name: pull-ci-super-duper-main-unit
     rerun_command: /test unit
     spec:
       containers:
@@ -267,10 +267,10 @@ presubmits:
   - agent: jenkins
     always_run: false
     branches:
-    - master
+    - main
     context: ci/openshift-jenkins/extended_gssapi
     labels:
-      master: ci.openshift.redhat.com
+      main: ci.openshift.redhat.com
     name: test_pull_request_origin_extended_gssapi
     rerun_command: /test extended_gssapi
     trigger: ((?m)^/test extended_gssapi,?(\s+|$))
