chore: use quay-proxy for entrypoint-warapper

--- a/pkg/steps/multi_stage/testdata/zz_fixture_TestGenerateObservers.yaml
+++ b/pkg/steps/multi_stage/testdata/zz_fixture_TestGenerateObservers.yaml
@@ -128,7 +128,7 @@
       - /tmp/entrypoint-wrapper/entrypoint-wrapper
       command:
       - cp
-      image: registry.ci.openshift.org/ci/entrypoint-wrapper:latest
+      image: quay-proxy.ci.openshift.org/openshift/ci:ci_entrypoint-wrapper_latest
       name: cp-entrypoint-wrapper
       resources: {}
       terminationMessagePolicy: FallbackToLogsOnError
@@ -285,7 +285,7 @@
       - /tmp/entrypoint-wrapper/entrypoint-wrapper
       command:
       - cp
-      image: registry.ci.openshift.org/ci/entrypoint-wrapper:latest
+      image: quay-proxy.ci.openshift.org/openshift/ci:ci_entrypoint-wrapper_latest
       name: cp-entrypoint-wrapper
       resources: {}
       terminationMessagePolicy: FallbackToLogsOnError
