--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_ec_TestCreateProwJob_Handle_invalid_prow_config.yaml
@@ -12,7 +12,8 @@ spec:
 status:
   conditions:
   - lastTransitionTime: "2025-04-02T12:12:12Z"
-    message: 'upload ci config: upload error'
+    message: 'validate and default presubmit: invalid presubmit job pull-ci-org-repo-branch-cluster-provisioning:
+      failed to default namespace'
     reason: CIOperatorJobsGenerateFailure
     status: "False"
     type: ClusterProvisioning
