--- a/pkg/controller/ephemeralcluster/testdata/zz_fixture_pj_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
+++ b/pkg/controller/ephemeralcluster/testdata/zz_fixture_pj_TestCreateProwJob_An_EphemeralCluster_request_creates_a_ProwJob.yaml
@@ -20,13 +20,25 @@ items:
       prow.k8s.io/refs.repo: ""
       prow.k8s.io/type: presubmit
     name: foobar
+    namespace: ci
     resourceVersion: "1"
   spec:
     agent: kubernetes
+    cluster: build01
     context: ci/prow/cluster-provisioning
     decoration_config:
+      gcs_configuration:
+        default_org: org
+        default_repo: repo
+        path_strategy: single
       skip_cloning: true
+      utility_images:
+        clonerefs: clonerefs
+        entrypoint: entrypoint
+        initupload: initupload
+        sidecar: sidecar
     job: pull-ci-org-repo-branch-cluster-provisioning
+    namespace: ci
     pod_spec:
       containers:
       - args:
@@ -38,8 +50,45 @@ items:
         command:
         - ci-operator
         env:
-        - name: CONFIG_SPEC_GCS_URL
-          value: gs://fake/gcs/path
+        - name: UNRESOLVED_CONFIG
+          value: |
+            releases:
+              initial:
+                integration:
+                  name: "4.17"
+                  namespace: ocp
+              latest:
+                integration:
+                  name: "4.17"
+                  namespace: ocp
+            resources:
+              '*':
+                limits:
+                  memory: 400Mi
+                requests:
+                  cpu: 200m
+            tests:
+            - as: cluster-provisioning
+              steps:
+                test:
+                - as: wait-test-complete
+                  commands: "#!/bin/bash\n\n# This loop keeps the ephemeral cluster up and running
+                    and then waits for\n# a konflux test to complete. Once the test is done, the
+                    EphemeralCluster \n# controller creates a synthetic secret 'test-done-keep-going'
+                    into this ci-operator NS,\n# unbloking the workflow and starting the deprovisioning
+                    procedures.\n\ni=0\nwhile true ; do\n    printf 'attempt %d\\n' $i\n    if
+                    $(oc get secret/test-done-keep-going 2>&1 | grep -qv 'not found'); then\n
+                    \       break\n    fi\n    i=$((i+1))\n    sleep 5s\ndone\n"
+                  from: cli
+                  resources:
+                    limits:
+                      memory: 400Mi
+                    requests:
+                      cpu: 200m
+            zz_generated_metadata:
+              branch: branch
+              org: org
+              repo: repo
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -76,9 +125,21 @@ items:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
+    prowjob_defaults:
+      tenant_id: GlobalDefaultID
+    refs:
+      base_link: /commit/fake
+      base_sha: fake
+      org: ""
+      pulls:
+      - author: ""
+        commit_link: /pull/0/commits/
+        number: 0
+        sha: ""
+      repo: ""
     rerun_command: /test cluster-provisioning
     type: presubmit
   status:
     startTime: "2025-04-02T12:12:12Z"
-    state: scheduling
+    state: triggered
 metadata: {}
